--- a/src/mainpkg/RegisterScene.fxml
+++ b/src/mainpkg/RegisterScene.fxml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+   <children>
+      <Label layoutX="136.0" layoutY="48.0" text="BANGLADESH EYE HOSPITAL">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <TextField layoutX="200.0" layoutY="130.0" promptText="ID" />
+      <TextField layoutX="201.0" layoutY="92.0" promptText="Name" />
+      <TextField layoutX="200.0" layoutY="169.0" promptText="Password" />
+      <ComboBox layoutX="200.0" layoutY="216.0" prefHeight="31.0" prefWidth="187.0" promptText="Status" />
+      <Button layoutX="257.0" layoutY="267.0" mnemonicParsing="false" text="Register" />
+   </children>
 </AnchorPane>
