--- a/src/Dhara/CreateBillsScene.fxml
+++ b/src/Dhara/CreateBillsScene.fxml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.TextField?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField layoutX="59.0" layoutY="75.0" />
+      <ComboBox layoutX="215.0" layoutY="75.0" prefHeight="31.0" prefWidth="180.0" promptText="choose treatment" />
+      <ComboBox layoutX="215.0" layoutY="116.0" prefHeight="31.0" prefWidth="180.0" promptText="choose medicine" />
+      <ComboBox layoutX="489.0" layoutY="75.0" prefHeight="31.0" prefWidth="26.0" />
+      <ComboBox layoutX="489.0" layoutY="116.0" prefHeight="31.0" prefWidth="35.0" />
+      <Label layoutX="412.0" layoutY="80.0" text="price" />
+      <Label layoutX="412.0" layoutY="121.0" text="price" />
+      <ComboBox layoutX="26.0" layoutY="75.0" prefHeight="31.0" prefWidth="180.0" promptText="choose patient" />
+      <DatePicker layoutX="26.0" layoutY="185.0" prefHeight="31.0" prefWidth="172.0" promptText="billed on" />
+      <DatePicker layoutX="215.0" layoutY="185.0" prefHeight="31.0" prefWidth="180.0" promptText="due by" />
+      <Button layoutX="424.0" layoutY="185.0" mnemonicParsing="false" text="add" />
+      <Label layoutX="34.0" layoutY="132.0" />
+      <Label layoutX="61.0" layoutY="132.0" text="Patient name" />
+      <Label layoutX="497.0" layoutY="47.0" text="Quantity:" />
    </children>
 </AnchorPane>
