--- a/src/Dhara/Accountant/CreateExpenseRecordScene.fxml
+++ b/src/Dhara/Accountant/CreateExpenseRecordScene.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -11,14 +12,15 @@
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
    <children>
       <DatePicker layoutX="177.0" layoutY="224.0" promptText="add date of spenditure" />
-      <TextField layoutX="177.0" layoutY="185.0" prefHeight="31.0" prefWidth="218.0" promptText="add item spent on" />
       <TextField layoutX="177.0" layoutY="147.0" prefHeight="31.0" prefWidth="218.0" promptText="add amount" />
       <Label layoutX="138.0" layoutY="83.0" prefHeight="35.0" prefWidth="305.0" text="CREATE EXPENSE RECORD ">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button layoutX="263.0" layoutY="279.0" mnemonicParsing="false" text="add" />
+      <Button layoutX="443.0" layoutY="185.0" mnemonicParsing="false" text="add" />
       <Button layoutX="24.0" layoutY="22.0" mnemonicParsing="false" text="back" />
+      <ComboBox layoutX="177.0" layoutY="185.0" prefHeight="31.0" prefWidth="218.0" promptText="choose spend reason" />
+      <TextField layoutX="177.0" layoutY="266.0" prefHeight="81.0" prefWidth="218.0" promptText="details:" />
    </children>
 </AnchorPane>
