--- a/src/Dhara/Accountant/CreateInsuranceRecordScene.fxml
+++ b/src/Dhara/Accountant/CreateInsuranceRecordScene.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.PieChart?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
    <children>
-      <PieChart layoutX="87.0" layoutY="51.0" prefHeight="285.0" prefWidth="375.0" />
+      <TextField layoutX="107.0" layoutY="72.0" />
+      <TextField layoutX="107.0" layoutY="113.0" />
    </children>
 </AnchorPane>
