--- a/src/Dhara/Accountant/ViewBillRecordsScene.fxml
+++ b/src/Dhara/Accountant/ViewBillRecordsScene.fxml
@@ -8,26 +8,25 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TableView layoutX="30.0" layoutY="125.0" prefHeight="237.0" prefWidth="301.0">
+      <TableView fx:id="billRecodsTableView" layoutX="30.0" layoutY="125.0" prefHeight="237.0" prefWidth="301.0">
         <columns>
-          <TableColumn prefWidth="92.0" text="patient ID" />
-          <TableColumn prefWidth="58.0" text="Total" />
-            <TableColumn prefWidth="75.0" text="Billed On" />
-            <TableColumn prefWidth="75.0" text="Billed By" />
+          <TableColumn fx:id="patientIdTableColoumn" prefWidth="92.0" text="patient ID" />
+          <TableColumn fx:id="totalTableColoumn" prefWidth="58.0" text="Total" />
+            <TableColumn fx:id="billedOntableColoumn" prefWidth="75.0" text="Billed On" />
+            <TableColumn fx:id="billedByTableColoumn" prefWidth="75.0" text="Billed By" />
         </columns>
       </TableView>
-      <TextField layoutX="345.0" layoutY="156.0" prefHeight="31.0" prefWidth="160.0" promptText="type patient id" />
-      <Button layoutX="355.0" layoutY="202.0" mnemonicParsing="false" prefHeight="83.0" prefWidth="140.0" text="calculate selected patients total of all time" wrapText="true" />
-      <TextField layoutX="355.0" layoutY="296.0" prefHeight="59.0" prefWidth="140.0" promptText="shows total here" />
-      <Button layoutX="516.0" layoutY="156.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="65.0" text="search" wrapText="true" />
+      <TextField fx:id="searchPatientidTextfield" layoutX="345.0" layoutY="125.0" prefHeight="31.0" prefWidth="160.0" promptText="type patient id" />
+      <Button layoutX="345.0" layoutY="172.0" mnemonicParsing="false" onAction="#onClickPatientsButton" prefHeight="83.0" prefWidth="140.0" text="calculate selected patients total of all time" wrapText="true" />
+      <TextField fx:id="showTotalTextField" layoutX="345.0" layoutY="270.0" prefHeight="59.0" prefWidth="140.0" promptText="shows total here" />
+      <Button layoutX="516.0" layoutY="156.0" mnemonicParsing="false" onAction="#searchButtonOnClick" prefHeight="31.0" prefWidth="65.0" text="search" wrapText="true" />
       <Label layoutX="185.0" layoutY="62.0" text="VIEW BILL RECORDS">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="back" />
+      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="back" />
    </children>
 </AnchorPane>
