--- a/src/Dhara/Nurse/AdmitPatientScene.fxml
+++ b/src/Dhara/Nurse/AdmitPatientScene.fxml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+   <children>
+      <Label layoutX="204.0" layoutY="65.0" text="ADMIT  PATIENT">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <TextField fx:id="enterPatientIdTextField" layoutX="76.0" layoutY="146.0" promptText="Enter Patient ID to admit" />
+      <Label fx:id="currentPatientStatusLabel" layoutX="76.0" layoutY="200.0" prefHeight="21.0" prefWidth="158.0" text="Patient update Status" />
+      <Button layoutX="347.0" layoutY="169.0" mnemonicParsing="false" text="Add" />
+   </children>
 </AnchorPane>
