--- a/src/Dhara/Nurse/UpdatePatientDoseScene.fxml
+++ b/src/Dhara/Nurse/UpdatePatientDoseScene.fxml
@@ -1,11 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+   <children>
+      <Label layoutX="166.0" layoutY="25.0" text="UPDATE PATIENT DOSE">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <TableView layoutX="49.0" layoutY="72.0" prefHeight="200.0" prefWidth="428.0">
+        <columns>
+          <TableColumn fx:id="PatientIdTableColoumn" prefWidth="118.0" text="Patient Id" />
+          <TableColumn fx:id="medicineTableColoumn" prefWidth="73.0" text="Medicine" />
+            <TableColumn fx:id="doseTableColoumn" prefWidth="118.0" text="Dose" />
+            <TableColumn fx:id="durationTableColoumn" prefWidth="118.0" text="Duration" />
+        </columns>
+      </TableView>
+      <Button layoutX="381.0" layoutY="290.0" mnemonicParsing="false" onAction="#onClickEditDoseButton" text="Edit dose" />
+      <TextField fx:id="enterIdPatientTextField" layoutX="49.0" layoutY="290.0" promptText="enter valid patient Id" />
+      <Button layoutX="277.0" layoutY="290.0" mnemonicParsing="false" onAction="#onActionsearchButton" text="Search" />
+      <Button layoutX="277.0" layoutY="335.0" mnemonicParsing="false" onAction="#onClickMarkAsCompletedButton" prefHeight="31.0" prefWidth="181.0" text="Mark as completed" />
+   </children>
 </AnchorPane>
