--- a/src/Dhara/Nurse/ViewAssignedtasksScene.fxml
+++ b/src/Dhara/Nurse/ViewAssignedtasksScene.fxml
@@ -1,11 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+   <children>
+      <Label layoutX="167.0" layoutY="68.0" text="VIEW ASSIGNED TASKS">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <TableView layoutX="67.0" layoutY="150.0" prefHeight="200.0" prefWidth="298.0">
+        <columns>
+          <TableColumn prefWidth="78.0" text="Name" />
+          <TableColumn prefWidth="95.0" text="Designation" />
+            <TableColumn prefWidth="124.0" text="Task" />
+        </columns>
+      </TableView>
+      <Button layoutX="414.0" layoutY="277.0" mnemonicParsing="false" text="Mark as Done" />
+      <Label layoutX="392.0" layoutY="181.0" prefHeight="79.0" prefWidth="157.0" text="Click on a task to choose it to mark as Done" wrapText="true" />
+   </children>
 </AnchorPane>
