--- a/src/Dhara/Accountant/UpdateBillStatusScene.fxml
+++ b/src/Dhara/Accountant/UpdateBillStatusScene.fxml
@@ -11,23 +11,23 @@
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
    <children>
-      <TableView layoutX="28.0" layoutY="168.0" prefHeight="200.0" prefWidth="303.0">
+      <TableView fx:id="pendingBillTableColoumn" layoutX="28.0" layoutY="168.0" prefHeight="200.0" prefWidth="303.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="patient id" />
-          <TableColumn prefWidth="75.0" text="amount" />
-            <TableColumn prefWidth="75.0" text="billed on" />
-            <TableColumn prefWidth="75.0" text="billed by" />
+          <TableColumn fx:id="patientIdTableColoumn" prefWidth="75.0" text="patient id" />
+          <TableColumn fx:id="amountTableColoumn" prefWidth="75.0" text="amount" />
+            <TableColumn fx:id="billedOntableColoumn" prefWidth="75.0" text="billed on" />
+            <TableColumn fx:id="billedBytableColoumn" prefWidth="75.0" text="billed by" />
         </columns>
       </TableView>
-      <Button layoutX="373.0" layoutY="328.0" mnemonicParsing="false" text="Update Status to paid" />
-      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Button" />
+      <Button layoutX="373.0" layoutY="328.0" mnemonicParsing="false" onAction="#updateStatusButtonOnClick" text="Update Status to paid" />
+      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="Back" />
       <Label layoutX="137.0" layoutY="98.0" text="UPDATE PENDING BILL STATUS">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
       <Label layoutX="373.0" layoutY="297.0" text="Choose a bill first then:" />
-      <TextField layoutX="356.0" layoutY="237.0" prefHeight="42.0" prefWidth="123.0" promptText="enter patient id" />
-      <Button layoutX="493.0" layoutY="243.0" mnemonicParsing="false" text="Search" />
+      <TextField fx:id="enterIdTextField" layoutX="356.0" layoutY="237.0" prefHeight="42.0" prefWidth="123.0" promptText="enter patient id" />
+      <Button layoutX="493.0" layoutY="243.0" mnemonicParsing="false" onAction="#searchButtonOnClick" text="Search" />
    </children>
 </AnchorPane>
