--- a/src/Dhara/Nurse/UpdatePatientDoseScene.fxml
+++ b/src/Dhara/Nurse/UpdatePatientDoseScene.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="166.0" layoutY="25.0" text="UPDATE PATIENT DOSE">
          <font>
@@ -28,5 +27,6 @@
       <TextField fx:id="enterIdPatientTextField" layoutX="49.0" layoutY="290.0" promptText="enter valid patient Id" />
       <Button layoutX="277.0" layoutY="290.0" mnemonicParsing="false" onAction="#onActionsearchButton" text="Search" />
       <Button layoutX="277.0" layoutY="335.0" mnemonicParsing="false" onAction="#onClickMarkAsCompletedButton" prefHeight="31.0" prefWidth="181.0" text="Mark as completed" />
+      <Button layoutX="17.0" layoutY="10.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="Back" />
    </children>
 </AnchorPane>
