--- a/src/Dhara/Nurse/ViewPatientPrescriptionScene.fxml
+++ b/src/Dhara/Nurse/ViewPatientPrescriptionScene.fxml
@@ -7,16 +7,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="129.0" layoutY="42.0" text="VIEW PATIENT PRESCRIPTION">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <TextField layoutX="93.0" layoutY="91.0" promptText="Enter Valid Patient Id" />
-      <Button layoutX="342.0" layoutY="91.0" mnemonicParsing="false" text="Show prescription" wrapText="true" />
-      <TextArea layoutX="92.0" layoutY="146.0" prefHeight="200.0" prefWidth="399.0" />
+      <TextField fx:id="enterIdTextField" layoutX="93.0" layoutY="91.0" promptText="Enter Valid Patient Id" />
+      <Button layoutX="342.0" layoutY="91.0" mnemonicParsing="false" onAction="#onClickShowPrescriptionButton" text="Show prescription" wrapText="true" />
+      <TextArea fx:id="patientPrescriptionTextField" layoutX="92.0" layoutY="146.0" prefHeight="200.0" prefWidth="399.0" />
+      <Button layoutX="27.0" layoutY="14.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="Back" />
    </children>
 </AnchorPane>
