--- a/src/Dhara/Accountant/SeeMedicineBillChartReport.fxml
+++ b/src/Dhara/Accountant/SeeMedicineBillChartReport.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
    <children>
-      <PieChart layoutX="134.0" layoutY="104.0" prefHeight="240.0" prefWidth="333.0" />
+      <PieChart fx:id="SpenditureReportPieChart" layoutX="134.0" layoutY="104.0" prefHeight="240.0" prefWidth="333.0" />
       <Label layoutX="145.0" layoutY="51.0" text="VIEW SPENDITURE REPORT">
          <font>
             <Font name="System Bold" size="24.0" />
