--- a/src/Dhara/Accountant/CreateBillsScene.fxml
+++ b/src/Dhara/Accountant/CreateBillsScene.fxml
@@ -16,7 +16,7 @@
       <ComboBox fx:id="treatmentQuantityComboBox" layoutX="489.0" layoutY="147.0" onAction="#treatmentQuantityComboBox" prefHeight="31.0" prefWidth="26.0" />
       <ComboBox fx:id="medicineQuantityComboBox" layoutX="489.0" layoutY="185.0" onAction="#onClickMedQuantityCombobox" prefHeight="31.0" prefWidth="35.0" />
       <Label fx:id="treatmentPriceLabel" layoutX="424.0" layoutY="152.0" text="price" />
-      <Label fx:id="treatmentPriceLabel" layoutX="424.0" layoutY="190.0" text="price" />
+      <Label fx:id="medicinePriceLabel" layoutX="424.0" layoutY="190.0" text="price" />
       <ComboBox fx:id="patientComboBox" layoutX="34.0" layoutY="162.0" onAction="#onClickPatientComboBox" prefHeight="31.0" prefWidth="180.0" promptText="choose patient" />
       <DatePicker fx:id="BilledOnDatePicker" layoutX="215.0" layoutY="285.0" prefHeight="31.0" prefWidth="180.0" promptText="billed on" />
       <DatePicker fx:id="DueByDatePicker" layoutX="215.0" layoutY="337.0" prefHeight="31.0" prefWidth="180.0" promptText="due by" />
