--- a/src/Dhara/Accountant/CreateBillsScene.fxml
+++ b/src/Dhara/Accountant/CreateBillsScene.fxml
@@ -13,11 +13,11 @@
    <children>
       <ComboBox fx:id="treatmentComboBox" layoutX="224.0" layoutY="147.0" onAction="#onClickTreatmentComboBox" prefHeight="31.0" prefWidth="180.0" promptText="choose treatment" />
       <ComboBox fx:id="medicineComboBox" layoutX="224.0" layoutY="185.0" onAction="#onClickMedsComboBox" prefHeight="31.0" prefWidth="180.0" promptText="choose medicine" />
-      <ComboBox fx:id="treatmentQuantityComboBox" layoutX="489.0" layoutY="147.0" onAction="#treatmentQuantityComboBox" prefHeight="31.0" prefWidth="26.0" />
+      <ComboBox fx:id="treatmentQuantityComboBox" layoutX="489.0" layoutY="147.0" prefHeight="31.0" prefWidth="26.0" />
       <ComboBox fx:id="medicineQuantityComboBox" layoutX="489.0" layoutY="185.0" onAction="#onClickMedQuantityCombobox" prefHeight="31.0" prefWidth="35.0" />
       <Label fx:id="treatmentPriceLabel" layoutX="424.0" layoutY="152.0" text="price" />
       <Label fx:id="medicinePriceLabel" layoutX="424.0" layoutY="190.0" text="price" />
-      <ComboBox fx:id="patientComboBox" layoutX="34.0" layoutY="162.0" onAction="#onClickPatientComboBox" prefHeight="31.0" prefWidth="180.0" promptText="choose patient" />
+      <ComboBox fx:id="patientComboBox" layoutX="26.0" layoutY="147.0" prefHeight="31.0" prefWidth="180.0" promptText="choose patient" />
       <DatePicker fx:id="BilledOnDatePicker" layoutX="215.0" layoutY="285.0" prefHeight="31.0" prefWidth="180.0" promptText="billed on" />
       <DatePicker fx:id="DueByDatePicker" layoutX="215.0" layoutY="337.0" prefHeight="31.0" prefWidth="180.0" promptText="due by" />
       <Button layoutX="457.0" layoutY="291.0" mnemonicParsing="false" onAction="#addBillOnClick" prefHeight="59.0" prefWidth="114.0" text="add" />
@@ -27,10 +27,9 @@
       <TextArea fx:id="totalOutputTextField" layoutX="38.0" layoutY="272.0" prefHeight="96.0" prefWidth="156.0" />
       <Label layoutX="38.0" layoutY="245.0" text="total in BDT" />
       <Button layoutX="548.0" layoutY="147.0" mnemonicParsing="false" onAction="#onClickAddTreatmentButton" text="add" />
-      <Button layoutX="548.0" layoutY="185.0" mnemonicParsing="false" onAction="#onClickAddMedicineButton" text="add" />
       <Line endX="473.0" layoutX="127.0" layoutY="226.0" startX="-100.0" />
       <Button layoutX="18.0" layoutY="14.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="Back" />
-      <Label layoutX="223.0" layoutY="45.0" text="CREATE BILL" wrapText="true">
+      <Label layoutX="222.0" layoutY="30.0" text="CREATE BILL" wrapText="true">
          <font>
             <Font name="System Bold" size="31.0" />
          </font>
