--- a/src/Dhara/Accountant/AccountantWelcomeScene.fxml
+++ b/src/Dhara/Accountant/AccountantWelcomeScene.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Dhara.Accountant.AccountantWelcomeSceneController">
    <children>
       <Label fx:id="accountantNameTextField" layoutX="272.0" layoutY="190.0" text="Name" textAlignment="CENTER" />
       <Label fx:id="accountantIdTextField" layoutX="279.0" layoutY="232.0" text="Id" textAlignment="CENTER" />
