--- a/src/Dhara/Accountant/CreateExpenseRecordScene.fxml
+++ b/src/Dhara/Accountant/CreateExpenseRecordScene.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Accountant.CreateExpenseRecordSceneController">
    <children>
       <DatePicker fx:id="expenseRecordDatePicker" layoutX="177.0" layoutY="224.0" promptText="add date of spenditure" />
       <TextField fx:id="addAmountTextField" layoutX="177.0" layoutY="147.0" prefHeight="31.0" prefWidth="218.0" promptText="add amount" />
