--- a/src/Dhara/Accountant/CreateInsuranceRecordScene.fxml
+++ b/src/Dhara/Accountant/CreateInsuranceRecordScene.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Dhara.Accountant.CreateInsuranceRecordSceneController">
    <children>
       <TextField layoutX="107.0" layoutY="72.0" />
       <TextField layoutX="107.0" layoutY="113.0" />
