--- a/src/Dhara/Accountant/MakeABillScene.fxml
+++ b/src/Dhara/Accountant/MakeABillScene.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Dhara.Accountant.MakeABillSceneController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Accountant.MakeABillSceneController">
    <children>
       <ComboBox fx:id="medicineQuantityComboBox" layoutX="422.0" layoutY="93.0" prefHeight="31.0" prefWidth="37.0" />
       <ComboBox fx:id="treatmentQuantityComboBox" layoutX="422.0" layoutY="136.0" prefHeight="31.0" prefWidth="37.0" />
