--- a/src/Dhara/Accountant/ViewBillRecordsScene.fxml
+++ b/src/Dhara/Accountant/ViewBillRecordsScene.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Accountant.ViewBillRecordsSceneController">
    <children>
       <TableView fx:id="billRecodsTableView" layoutX="30.0" layoutY="125.0" prefHeight="237.0" prefWidth="301.0">
         <columns>
