--- a/src/Dhara/Accountant/ViewExpenseRecordScene.fxml
+++ b/src/Dhara/Accountant/ViewExpenseRecordScene.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Accountant.ViewExpenseRecordSceneController">
    <children>
       <TableView layoutX="57.0" layoutY="148.0" prefHeight="200.0" prefWidth="252.0">
         <columns>
