--- a/src/Dhara/Accountant/ViewInsuranceRecordScene.fxml
+++ b/src/Dhara/Accountant/ViewInsuranceRecordScene.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Dhara.Accountant.ViewInsuranceRecordSceneController">
    <children>
       <TableView layoutX="28.0" layoutY="85.0" prefHeight="282.0" prefWidth="353.0">
         <columns>
