--- a/src/CommonScenes/LoginScene.fxml
+++ b/src/CommonScenes/LoginScene.fxml
@@ -14,7 +14,7 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <TextField fx:id="enterNameTextField" layoutX="207.0" layoutY="162.0" promptText="enter name" />
+      <TextField fx:id="enterIdTextField" layoutX="207.0" layoutY="162.0" promptText="enter Id" />
       <TextField fx:id="passwordTextField" layoutX="207.0" layoutY="210.0" promptText="enter password" />
       <Button layoutX="26.0" layoutY="14.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="Back" />
    </children>
