--- a/src/CommonScenes/StartScene.fxml
+++ b/src/CommonScenes/StartScene.fxml
@@ -14,5 +14,6 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
+      <Button layoutX="261.0" layoutY="274.0" mnemonicParsing="false" onAction="#tempbuttonOnClick" text="TempButton" />
    </children>
 </AnchorPane>
