--- a/src/Dhara/Accountant/ViewExpenseRecordScene.fxml
+++ b/src/Dhara/Accountant/ViewExpenseRecordScene.fxml
@@ -24,6 +24,6 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Back" />
+      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="Back" />
    </children>
 </AnchorPane>
