--- a/src/CommonScenes/StartScene.fxml
+++ b/src/CommonScenes/StartScene.fxml
@@ -15,5 +15,6 @@
          </font>
       </Label>
       <Button layoutX="261.0" layoutY="274.0" mnemonicParsing="false" onAction="#tempbuttonOnClick" text="TempButton" />
+      <Button layoutX="261.0" layoutY="320.0" mnemonicParsing="false" onAction="#tempTwo" text="Temp 2 button" />
    </children>
 </AnchorPane>
