--- a/src/Nushrat/PharmacistDashboardScene.fxml
+++ b/src/Nushrat/PharmacistDashboardScene.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Nushrat.PharmacistDashboardSceneController">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Nushrat.PharmacistDashboardSceneController">
+   <children>
+      <Label layoutX="180.0" layoutY="149.0" text="welcome pharmacist" />
+   </children>
 </AnchorPane>
