--- a/src/Dhara/Accountant/SeeMedicineBillChartReport.fxml
+++ b/src/Dhara/Accountant/SeeMedicineBillChartReport.fxml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.PieChart?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Accountant.SeeMedicineBillChartReportController">
    <children>
-      <PieChart fx:id="SpenditureReportPieChart" layoutX="134.0" layoutY="104.0" prefHeight="240.0" prefWidth="333.0" />
-      <Label layoutX="145.0" layoutY="51.0" text="VIEW SPENDITURE REPORT">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Label>
-      <Button layoutX="260.0" layoutY="322.0" mnemonicParsing="false" onAction="#onClickViewChart" text="View Chart" />
+      <Button layoutX="31.0" layoutY="20.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="Back" />
+      <BarChart fx:id="BillBarChart" layoutX="74.0" layoutY="62.0" prefHeight="316.0" prefWidth="452.0" title="VIEW SPENDITURE REPORT">
+        <xAxis>
+          <CategoryAxis fx:id="yaxis" label="Patient Id" side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis label="Total Due" side="LEFT" fx:id="xaxis" />
+        </yAxis>
+      </BarChart>
    </children>
 </AnchorPane>
