--- a/src/Nazifa/Doctor/ProvidePrescriptionScene.fxml
+++ b/src/Nazifa/Doctor/ProvidePrescriptionScene.fxml
@@ -8,17 +8,17 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="431.0" prefWidth="695.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Nazifa.Doctor.ProvidePrescriptionSceneController">
+<AnchorPane id="AnchorPane" prefHeight="431.0" prefWidth="695.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="154.0" layoutY="47.0" text="PRESCRIBE NEW PATIENT">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <TableView fx:id="prescribePatientTableView" layoutX="54.0" layoutY="100.0" prefHeight="280.0" prefWidth="249.0">
+      <TableView fx:id="patientTableView" layoutX="54.0" layoutY="100.0" prefHeight="280.0" prefWidth="249.0">
         <columns>
-          <TableColumn fx:id="patientNameTableViewColumn" prefWidth="135.66665649414062" text="Patient Name" />
-          <TableColumn fx:id="patientIDTableViewColumn" prefWidth="112.33334350585938" text="Patient ID" />
+          <TableColumn prefWidth="135.66665649414062" text="Patient Name" />
+          <TableColumn prefWidth="112.33334350585938" text="Patient ID" />
         </columns>
       </TableView>
       <ComboBox fx:id="diagnosisComboBox" layoutX="329.0" layoutY="100.0" prefWidth="150.0" promptText="Select Diagnosis" />
