--- a/src/Dhara/Accountant/ViewInsuranceRecordScene.fxml
+++ b/src/Dhara/Accountant/ViewInsuranceRecordScene.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="Dhara.Accountant.ViewInsuranceRecordSceneController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Accountant.ViewInsuranceRecordSceneController">
    <children>
       <TableView layoutX="28.0" layoutY="85.0" prefHeight="282.0" prefWidth="353.0">
         <columns>
@@ -25,5 +24,6 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
+      <Button layoutX="28.0" layoutY="18.0" mnemonicParsing="false" onAction="#BackOnClick" text="Back" />
    </children>
 </AnchorPane>
