--- a/src/CommonScenes/RegisterScene.fxml
+++ b/src/CommonScenes/RegisterScene.fxml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CommonScenes.RegisterSceneController">
    <children>
+      <PasswordField fx:id="passwordtextField" layoutX="207.0" layoutY="218.0" promptText="pass" />
       <Label layoutX="136.0" layoutY="48.0" text="BANGLADESH EYE HOSPITAL">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <TextField fx:id="idTextField" layoutX="201.0" layoutY="185.0" promptText="ID" />
-      <TextField fx:id="nameTextField" layoutX="201.0" layoutY="144.0" promptText="Name" />
-      <TextField fx:id="passwordtextField" layoutX="201.0" layoutY="220.0" promptText="Password" />
-      <Button layoutX="257.0" layoutY="267.0" mnemonicParsing="false" onAction="#registerButtonOnClick" text="Register" />
+      <TextField fx:id="idTextField" layoutX="207.0" layoutY="177.0" promptText="ID" />
+      <TextField fx:id="nameTextField" layoutX="207.0" layoutY="138.0" promptText="Name" />
+      <Button layoutX="422.0" layoutY="249.0" mnemonicParsing="false" onAction="#registerButtonOnClick" text="Register" />
       <Label layoutX="229.0" layoutY="96.0" text="Patient Registration" />
+      <TextField fx:id="emailTextField" layoutX="207.0" layoutY="258.0" promptText="Email" />
+      <DatePicker fx:id="DOBDatePicker" layoutX="207.0" layoutY="337.0" prefHeight="31.0" prefWidth="187.0" promptText="Date of Birth" />
+      <TextField fx:id="genderTextField" layoutX="207.0" layoutY="297.0" promptText="gender" />
+      <Button layoutX="422.0" layoutY="208.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="Back" />
    </children>
 </AnchorPane>
