file editing works

--- a/src/Dhara/Accountant/ViewBillRecordsScene.fxml
+++ b/src/Dhara/Accountant/ViewBillRecordsScene.fxml
@@ -10,14 +10,14 @@
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="678.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Accountant.ViewBillRecordsSceneController">
    <children>
-      <TableView fx:id="billRecodsTableView" layoutX="41.0" layoutY="139.0" prefHeight="237.0" prefWidth="572.0">
+      <TableView fx:id="billRecodsTableView" layoutX="41.0" layoutY="139.0" prefHeight="237.0" prefWidth="617.0">
         <columns>
           <TableColumn fx:id="patientIdTableColoumn" prefWidth="92.0" text="patient ID" />
           <TableColumn fx:id="totalTableColoumn" prefWidth="58.0" text="Total" />
             <TableColumn fx:id="billedOntableColoumn" prefWidth="128.0" text="Billed On" />
-            <TableColumn fx:id="billedByTableColoumn" prefWidth="67.0" text="Due By" />
+            <TableColumn fx:id="billedByTableColoumn" prefWidth="125.0" text="Due By" />
             <TableColumn fx:id="paidStatusTableColoumn" prefWidth="70.0" text="Paid" />
-            <TableColumn fx:id="accountantIdTableColoumn" prefWidth="156.0" text="AccountantId" />
+            <TableColumn fx:id="accountantIdTableColoumn" prefWidth="143.0" text="AccountantId" />
         </columns>
       </TableView>
       <TextField fx:id="searchPatientidTextfield" layoutX="167.0" layoutY="97.0" prefHeight="31.0" prefWidth="160.0" promptText="type patient id" />
@@ -29,5 +29,6 @@
       </Label>
       <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="back" />
       <Button layoutX="415.0" layoutY="97.0" mnemonicParsing="false" onAction="#loadAllOnClick" text="Load All" />
+      <Button layoutX="501.0" layoutY="97.0" mnemonicParsing="false" onAction="#makePDFonClick" text="make pdf" />
    </children>
 </AnchorPane>
