--- a/src/Dhara/Accountant/UpdateBillStatusScene.fxml
+++ b/src/Dhara/Accountant/UpdateBillStatusScene.fxml
@@ -10,12 +10,12 @@
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Dhara.Accountant.UpdateBillStatusSceneController">
    <children>
-      <TableView fx:id="pendingBillTableColoumn" layoutX="28.0" layoutY="168.0" prefHeight="200.0" prefWidth="303.0">
+      <TableView fx:id="pendingBillTable" layoutX="28.0" layoutY="168.0" prefHeight="200.0" prefWidth="303.0">
         <columns>
           <TableColumn fx:id="patientIdTableColoumn" prefWidth="75.0" text="patient id" />
           <TableColumn fx:id="amountTableColoumn" prefWidth="75.0" text="amount" />
-            <TableColumn fx:id="billedOntableColoumn" prefWidth="75.0" text="billed on" />
-            <TableColumn fx:id="StatusTableColoumn" prefWidth="75.0" text="paid" />
+            <TableColumn fx:id="dueBytableColoumn" prefWidth="75.0" text="due by" />
+            <TableColumn fx:id="accountantIdTableColoumn" prefWidth="75.0" text="issued by" />
         </columns>
       </TableView>
       <Button layoutX="360.0" layoutY="168.0" mnemonicParsing="false" onAction="#updateStatusButtonOnClick" prefHeight="66.0" prefWidth="129.0" text="Update Status to paid" wrapText="true" />
@@ -28,5 +28,6 @@
       <TextField fx:id="enterIdTextField" layoutX="124.0" layoutY="94.0" prefHeight="42.0" prefWidth="146.0" promptText="enter search term" />
       <Button layoutX="284.0" layoutY="100.0" mnemonicParsing="false" onAction="#searchButtonOnClick" text="Search" />
       <Label fx:id="billStatusUpdateTextField" layoutX="360.0" layoutY="305.0" />
+      <Button layoutX="360.0" layoutY="100.0" mnemonicParsing="false" onAction="#loadAllOnClick" text="load" />
    </children>
 </AnchorPane>
