--- a/src/CommonScenes/LoginScene.fxml
+++ b/src/CommonScenes/LoginScene.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -15,7 +16,9 @@
          </font>
       </Label>
       <TextField fx:id="enterIdTextField" layoutX="207.0" layoutY="162.0" promptText="enter Id" />
-      <TextField fx:id="passwordTextField" layoutX="207.0" layoutY="210.0" promptText="enter password" />
       <Button layoutX="26.0" layoutY="14.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="Back" />
+      <PasswordField fx:id="passwordTextField" layoutX="207.0" layoutY="206.0" promptText="enter password" />
+      <Label layoutX="169.0" layoutY="167.0" text="ID" />
+      <Label layoutX="162.0" layoutY="211.0" text="Pass" />
    </children>
 </AnchorPane>
