--- a/src/Dhara/Accountant/CreateExpenseRecordScene.fxml
+++ b/src/Dhara/Accountant/CreateExpenseRecordScene.fxml
@@ -19,7 +19,7 @@
       </Label>
       <Button layoutX="443.0" layoutY="185.0" mnemonicParsing="false" onAction="#addButtonOnClick" text="add" />
       <Button layoutX="24.0" layoutY="22.0" mnemonicParsing="false" onAction="#backButtonOnClick" text="back" />
-      <ComboBox fx:id="chooseSpendReasonComboBox" layoutX="177.0" layoutY="185.0" onAction="#OnClickChooseSpendReason" prefHeight="31.0" prefWidth="218.0" promptText="choose spend reason" />
+      <ComboBox fx:id="chooseSpendReasonComboBox" layoutX="177.0" layoutY="185.0" prefHeight="31.0" prefWidth="218.0" promptText="choose spend reason" />
       <TextField fx:id="detailsTextField" layoutX="177.0" layoutY="266.0" prefHeight="81.0" prefWidth="218.0" promptText="details:" />
    </children>
 </AnchorPane>
